<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    android:orientation="vertical"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    tools:context="id.astrajingga.monicca.Signup">

    <!-- logo -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_centerInParent="true"
            android:background="@drawable/bg_white"
            android:contentDescription="@string/signup_desc_img"
            android:src="@drawable/signup_logo" />

    </RelativeLayout>

    <!-- sign up fields -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:background="#FFFFFF"
            android:orientation="vertical"
            android:paddingBottom="14dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingTop="8dp">

            <!-- email -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:textColorHint="#BDBDBD">

                <EditText
                    android:id="@+id/signup_edittext_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="4dp"
                    android:drawableStart="@drawable/signin_username"
                    android:hint="@string/signup_hint_email"
                    android:inputType="textEmailAddress"
                    android:maxLength="16"
                    android:maxLines="1"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp" />

            </android.support.design.widget.TextInputLayout>

            <!-- password -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/toogle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#BDBDBD"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="#BDBDBD">

                <EditText
                    android:id="@+id/signup_edittext_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/signin_visibilityoff"
                    android:drawablePadding="4dp"
                    android:drawableStart="@drawable/signin_password"
                    android:fontFamily="@string/font_family_regular"
                    android:hint="@string/signup_hint_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:maxLines="1"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp" />

            </android.support.design.widget.TextInputLayout>

            <!-- line -->
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="20dp"
                android:background="#BDBDBD" />

            <!-- income -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:textColorHint="#BDBDBD">

                <EditText
                    android:id="@+id/signup_edittext_income"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="4dp"
                    android:drawableStart="@drawable/signup_income"
                    android:fontFamily="@string/font_family_regular"
                    android:hint="@string/signup_hint_income"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLines="1"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp" />

            </android.support.design.widget.TextInputLayout>

            <!-- sign up button -->
            <Button
                android:id="@+id/signup_button_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"
                android:background="@drawable/bg_button"
                android:text="@string/signup_btn_signup"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

        </LinearLayout>

        <!-- sign in button -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/signup_text_haveaccount" />

            <TextView
                android:id="@+id/signup_button_signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_btn_signin"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>